fix overflow on promo section

--- a/style.css
+++ b/style.css
@@ -147,11 +147,12 @@ footer nav ul {
 .promo-section {
   display: flex;
   max-width: 100%;
+  margin: 0 auto;
 }
 
 .promo-section img {
   width: 100%;
-  margin: 3px;
+  padding: 2px;
   height: 110%;
 }
 
